# mbedLPC1768

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  StratifyKernelSettings.json  StratifyLocalSettings.json  StratifySettings.json  ckernelsettings.ini  sl_settings.json  sl_workspace_settings.json
SDK/: CMakeLists.txt  depends.code-workspace
SDK/config/: sos_config.h
boot/: CMakeLists.txt  board_config.h  boot_board_config.c  boot_config.c  boot_link_config.c  link_transport.c  link_transport.h
build_debug/: makefile  objects.mk
build_debug/src/: subdir.mk
build_debug_boot/: makefile  objects.mk
build_debug_boot/boot/: subdir.mk
build_release/: makefile  objects.mk
build_release/src/: subdir.mk
build_release_boot/: makefile  objects.mk  sources.mk
build_release_boot/boot/: subdir.mk
mbedLPC1768/: CMakeLists.txt  sl_settings.json
mbedLPC1768/boot/: CMakeLists.txt  board_config.h  boot_board_config.c  boot_link_config.c  link_transport.c  link_transport.h
mbedLPC1768/ldscripts/: lpc-common.ld  lpc1768-bootloader.ld  lpc1768-rom.ld  lpc1769-bootloader.ld
mbedLPC1768/src/: config.h  localfs.h  sl_config.h
mbedLPC1768/src/config/: debug_config.c  devfs_config.c  link_config.c  link_config.h  os_config.c  sleep_config.c  sos_config.c  symbols_config.c  sys_config.c
script/: clean.bat  post-process.sh
src/: CMakeLists.txt  board_config.c  board_trace.c  board_trace.h  config.h  led_start.c  led_start.h  link_transport_uart.c  link_transport_uart.h  link_transport_usb.c  link_transport_usb.h  localfs.c  localfs.h  semihost_api.c  semihost_api.h  sl_config.h  stratify_symbols.c
src/config/: cache_config.c  clock_config.c  debug_config.c  fs_config.c  link_config.c  mcu_config.c  os_config.c  sos_config.c  sys_config.c  usb_config.c
