cmake_minimum_required (VERSION 3.6)

#Add sources to the project
set(SOURCES_PREFIX ${CMAKE_SOURCE_DIR}/src)
add_subdirectory(src)
list(APPEND KERNEL_SOURCELIST ${SOURCES})

#Change to boot sources
set(SOURCES "")
set(SOURCES_PREFIX ${CMAKE_SOURCE_DIR}/boot)
add_subdirectory(boot)
list(APPEND BOOT_SOURCELIST ${SOURCES})

if( ${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Darwin" )
  set(SOS_TOOLCHAIN_CMAKE_PATH /Applications/StratifyLabs-SDK/Tools/gcc/arm-none-eabi/cmake)
endif()
if( ${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows" )
  set(SOS_TOOLCHAIN_CMAKE_PATH C:/StratifyLabs-SDK/Tools/gcc/arm-none-eabi/lib/ldscripts)
endif()
set(CMAKE_TOOLCHAIN_FILE ${SOS_TOOLCHAIN_CMAKE_PATH}/sos-bsp-toolchain.cmake)
get_filename_component(SOS_BSP_NAME ${CMAKE_SOURCE_DIR} NAME)
project(${SOS_BSP_NAME} CXX C)

set(SOS_BSP_ARCH v7m)
set(SOS_BSP_DEVICE lpc1768)
set(SOS_BSP_DEVICE_FAMILY lpc17xx)
set(SOS_BSP_HARDWARD_ID 0x00000003)

set(SOS_BSP_LIBRARIES sgfx_kernel_1bpp)

set(SOS_BSP_STD_KERNEL_START_ADDRESS 0x40000)
set(SOS_BSP_STD_KERNEL_SOURCELIST ${KERNEL_SOURCELIST})
set(SOS_BSP_STD_BOOT_START_ADDRESS 0x0)
set(SOS_BSP_STD_BOOT_SOURCELIST ${BOOT_SOURCELIST})
include(${SOS_TOOLCHAIN_CMAKE_PATH}/sos-bsp-std.cmake)
